<resources>
    <string name="app_name">DotaStats</string>
    <string name="system_theme_button">Системная</string>
    <string name="light_theme_button">Светлая</string>
    <string name="dark_theme_button">Темная</string>
    <string name="turbo_win_rate_text">Turbo win rate</string>
    <string name="login_field_hint">Steam 32 ID</string>
    <string name="password_field_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="heroes_menu_title">Герои</string>
    <string name="profile_menu_title">Профиль</string>
    <string name="notes_menu_title">Заметки</string>
    <string name="note_title_hint">Название</string>
    <string name="add_note_button_text">Добавить</string>
    <string name="remove_button_text">Удалить</string>
    <string name="note_description_hint">Описание</string>
    <string name="dialog_network_error_title">Похоже у вас выключен интернет и сервера не видят вас, чтобы продолжить включите интернет на устройстве</string>
    <string name="dialog_error_positive_button">Хорошо</string>
    <string name="dialog_other_error_title">Разработчики уже знают о проблеме и активно думают о решении, остается только ждать обновлений...</string>
    <string name="recent_played_text">Recent played</string>
    <string name="turbo_stat_text">Turbo stat</string>
    <string name="profile_winrate_text">Winrate: %1$d</string>
</resources>