<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/system_theme_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="64dp"
        android:text="@string/system_theme_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/light_theme_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="64dp"
        android:text="@string/light_theme_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dark_theme_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="64dp"
        android:text="@string/dark_theme_button" />

    <ru.rubik.dotastats.profile.WinLoseStatView
        android:id="@+id/custom"
        app:positivePercent="60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
</LinearLayout>